--- a/content/scss/modules/_main.scss
+++ b/content/scss/modules/_main.scss
@@ -1,5 +1,11 @@
+.main {
+	position: relative;
+	z-index: 0;
+}
+
 section {
 	height 		: 100%;
+	overflow-y  : auto;
 
 	aside {
 		float 		: left;
