--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1874,7 +1874,7 @@
 */
 a {
   color: black;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 img {
@@ -2923,8 +2923,10 @@ html {
  */
 body {
   margin: 0;
-  background: #333;
+  background: white;
   min-height: 100%;
+  overflow-y: scroll;
+  height: 100%;
 }
 body ::-webkit-scrollbar {
   width: 1em;
@@ -3233,18 +3235,72 @@ table {
 /*
 	Modules
 */
-.main {
-  position: relative;
-  z-index: 0;
+nav {
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  background: #333;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+nav ul li {
+  list-style-type: none;
+  color: white;
+  cursor: pointer;
+  height: 25.5%;
+  display: table;
+  width: 100%;
+  border-bottom: 1px solid #120404;
+  -moz-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -o-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -webkit-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+}
+nav ul li.active {
+  background: white;
+  color: black;
+  -moz-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -o-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -webkit-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+}
+nav ul li:hover:not(.active) {
+  background: #3D3D3D;
+}
+nav ul li h2 {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  margin: 0;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+nav ul li h2 i {
+  display: block;
+  margin: 10px 0;
+  font-size: 30px;
 }
 
-section {
-  height: 100%;
-  overflow-y: auto;
+main {
+  width: calc(100% - 250px);
+  float: right;
+  padding: 20px;
+  min-height: 100vh;
+  background: white;
 }
-section aside {
+
+aside {
   float: left;
-  height: 100%;
+  padding: 20px;
 }
 
 .logo {
@@ -3296,127 +3352,41 @@ footer.active.active {
   transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
 }
 
-.item {
-  text-align: center;
-  display: table;
-  width: 25%;
-  height: 100%;
-  color: white;
-  text-transform: uppercase;
-  cursor: pointer;
-  -moz-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -o-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -webkit-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-}
-.tileOpen .item {
-  pointer-events: none;
-  z-index: 0;
-}
-.item:hover {
-  -moz-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -o-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -webkit-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  background: #222;
-}
-.item:first-child {
-  position: absolute;
-  top: 0;
-  right: 75%;
-  bottom: 0;
-  left: 0;
-  background: orange;
-}
-.item:nth-child(2) {
-  position: absolute;
-  top: 0;
-  right: 50%;
-  bottom: 0;
-  left: 25%;
-  background: cornflowerblue;
-}
-.item:nth-child(3) {
-  position: absolute;
-  top: 0;
-  right: 25%;
-  bottom: 0;
-  left: 50%;
-  background: indianred;
-}
-.item:nth-child(4) {
-  position: absolute;
-  top: 0;
-  right: 0%;
-  bottom: 0;
-  left: 75%;
-  background: lightgreen;
-}
-.item:after {
-  content: '';
-  display: block;
-  width: 20px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: auto;
-  bottom: 0;
-  background-image: -moz-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.3) 0, transparent 70%);
-  background-image: -o-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.3) 0, transparent 70%);
-  background-image: -webkit-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.3) 0, transparent 70%);
-  background-image: radial-gradient(ellipse cover at center, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%);
-  background-image: -ms-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.3) 0, transparent 70%);
-  overflow: hidden;
-  background-position: -10px center;
-  background-repeat: no-repeat;
-}
-.item header {
-  display: table-cell;
-  vertical-align: middle;
-}
-.item i {
-  font-size: 70px;
-}
-
 .item__content {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-  -moz-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -o-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -webkit-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  z-index: 1;
-  background: #f4f4f4;
-  transform: scale(0);
+  left: 250px;
+  -moz-transform: scale(0, 0);
+  -ms-transform: scale(0, 0);
+  -webkit-transform: scale(0, 0);
+  transform: scale(0, 0);
+  -moz-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -o-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -webkit-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
   opacity: 0;
-  z-index: 1000;
 }
 .item__content.active {
-  -moz-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -o-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  -webkit-transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  transition: all, 0.5s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
-  transform: scale(1);
+  -moz-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -moz-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -o-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  -webkit-transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
+  transition: all, 0.7s, cubic-bezier(0.95, 0.31, 0.12, 0.87);
   opacity: 1;
 }
-
-.item__description {
-  height: 100%;
-  padding: 30px;
-  overflow-y: auto;
-  color: white;
-}
-.item__description h2 {
-  margin: 0 0 10px;
+.item__content h2 {
+  margin-top: 0;
+  color: 333;
 }
 
 article {
   float: left;
-  height: 100%;
+  border-left: 1px solid lightgrey;
 }
 article header {
   padding: 10px 20px;
@@ -3428,8 +3398,6 @@ article header h2 {
 }
 article .inner {
   padding: 20px;
-  overflow-y: auto;
-  height: calc(100% - 54px);
   text-align: center;
 }
 article .row {
@@ -3453,11 +3421,47 @@ article img {
   max-width: 100%;
 }
 
-.graphicdesign {
-  background: darkorange;
+@keyframes pulsate {
+  0% {
+    transform: scale(0.1);
+    opacity: 0.0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
 }
-.graphicdesign h2 {
-  background: white;
-  padding: 10px;
-  color: orange;
+@-webkit-keyframes pulsate {
+  0% {
+    transform: scale(0.1);
+    opacity: 0.0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
+}
+.signal {
+  border: 3px solid #fff;
+  border-radius: 30px;
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 250px;
+  pointer-events: none;
+  animation: pulsate 1s ease-out;
+  animation-iteration-count: infinite;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite;
 }
