--- a/content/scss/generic/_normalize.scss
+++ b/content/scss/generic/_normalize.scss
@@ -79,9 +79,11 @@ html {
 
 body {
     margin: 0;
-    background: #333;
+    background: white;
     min-height: 100%;
     @include scrollbar(1em, #333);
+    overflow-y: scroll;
+    height: 100%;
 }
 
 /* ==========================================================================
