--- a/content/scss/modules/_main.scss
+++ b/content/scss/modules/_main.scss
@@ -1,15 +1,12 @@
-.main {
-	position: relative;
-	z-index: 0;
+main {
+	width: calc(100% - 250px);
+	float: right;
+	padding: 20px;
+	min-height: 100vh;
+	background: white;
 }
 
-section {
-	height 		: 100%;
-	overflow-y  : auto;
-
-	aside {
-		float 		: left;
-		height 		: 100%;
-	}
-
+aside {
+	float 		: left;
+	padding 	: 20px;
 }
