--- a/content/scss/modules/_nav.scss
+++ b/content/scss/modules/_nav.scss
@@ -18,8 +18,8 @@ nav {
 			border-bottom: 1px solid #120404;
 			@include transition(all, 0.7s, cubic-bezier(.95,.31,.12,.87));
 			&.active {
-				background: white;
-				color: black;
+				background: rgb(58, 173, 255);
+				color: white;
 				@include transition(all, 0.7s, cubic-bezier(.95,.31,.12,.87));
 			}
 			&:hover {
