--- a/content/scss/modules/_item.scss
+++ b/content/scss/modules/_item.scss
@@ -1,15 +1,15 @@
 .item__content {
 	@include pos(0 0 0 250px);
 	@include transform(scale(0,0));
-	@include transition(all, 0.7s, cubic-bezier(.95,.31,.12,.87));
+	@include transition(all 0.7s ease);
 	opacity: 0;
 
 	&.active {
 		@include transform(scale(1,1));
-		@include transition(all, 0.7s, cubic-bezier(.95,.31,.12,.87));
+		@include transition(all 0.7s ease);
 		opacity: 1;
 	}
-
+ 
 	h2 {
 		margin: 0 0;
 		color: #333;
@@ -23,8 +23,9 @@
 
 .item__description {
 	pointer-events: all;
-	@include transition(all, 0.7s, cubic-bezier(.95,.31,.12,.87));
+	@include transition(all 0.7s ease);
 	img {
 		max-width: 100%;
+		margin-bottom: 30px;
 	}
 }
