--- a/content/scss/modules/_loader.scss
+++ b/content/scss/modules/_loader.scss
@@ -27,13 +27,13 @@
 }
 
 .signal {
-    border:3px solid #fff;
+    border:3px solid white;
     border-radius:30px;
     width:30px;
     height:30px;
     margin: auto;
     opacity:0;
-    @include pos(0 0 0 250px);
+    
     pointer-events: none;
     animation: pulsate 1s ease-out;
     animation-iteration-count:infinite;
@@ -41,3 +41,37 @@
     -webkit-animation-iteration-count:infinite;
 }
 
+.preloader {
+  @include transition(all 0.7s ease);
+  @include transform(scale(0,0));
+  @include pos(0 0 0 0);
+  opacity:0;
+  display: table;
+  width: 100%;
+  height: 100%;
+  header {
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    h1 {
+      margin: 0;
+      color: #3aadff;
+      font-size: 60px;
+      text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.86);
+      line-height: 50px;
+    }
+    h3 {
+      font-size: 37px;
+      margin-top: 0px;
+      color: white;
+    }
+  }
+  .preloader--active & {
+      @include transition(all 0.7s ease);
+      @include transform(scale(1,1));
+      @include pos(0 0 0 0);
+      background: #333;
+      z-index: 1;
+      opacity:1;
+  }
+}
