--- a/content/scss/modules/_loader.scss
+++ b/content/scss/modules/_loader.scss
@@ -1,6 +1,8 @@
 @keyframes pulsate {
     0% {
       transform:scale(.1);
+      -webkit-transform: scale(.1);
+      -moz-transform: scale(.1);
       opacity: 0.0;
     }
     50% {
@@ -8,6 +10,8 @@
     }
     100% {
       transform:scale(1.2);
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
       opacity:0;
     }
 }
@@ -15,6 +19,8 @@
 @-webkit-keyframes pulsate {
     0% {
       transform:scale(.1);
+      -webkit-transform: scale(.1);
+      -moz-transform: scale(.1);
       opacity: 0.0;
     }
     50% {
@@ -22,6 +28,8 @@
     }
     100% {
       transform:scale(1.2);
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
       opacity:0;
     }
 }
@@ -73,5 +81,6 @@
       background: #333;
       z-index: 1;
       opacity:1;
+      border: 15px solid #3aadff;
   }
 }
